syntax = "proto3";

option java_multiple_files = true;
package com.omio.springbootgrpctest.model;

message CalculatorRequest {
  int64 number1 = 1;
  int64 number2 = 2;
  string operator = 3;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc calculate(CalculatorRequest) returns (CalculatorResponse);
}